--- a/css/sub_layout_design.css
+++ b/css/sub_layout_design.css
@@ -11,6 +11,63 @@ body{
   letter-spacing: 1px;
   background: #fff;
 }
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+.back-to-position.to-bottom {
+  transform: translateY(-150px);
+}
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+  transform: translateY(0);
+}
+.show .back-to-position.delay-0 {
+  transition-delay: 0;
+}
+.show .back-to-position.delay-1 {
+  transition-delay: .1s;
+}
+.show .back-to-position.delay-2 {
+  transition-delay: .2s;
+}
+.show .back-to-position.delay-3 {
+  transition-delay: .3s;
+}
+.show .back-to-position.delay-4 {
+  transition-delay: .4s;
+}
+.show .back-to-position.delay-5 {
+  transition-delay: .5s;
+}
+.show .back-to-position.delay-6 {
+  transition-delay: .6s;
+}
+.show .back-to-position.delay-7 {
+  transition-delay: .7s;
+}
+.show .back-to-position.delay-8 {
+  transition-delay: .8s;
+}
+.show .back-to-position.delay-9 {
+  transition-delay: .9s;
+}
+.show .back-to-position.delay-10 {
+  transition-delay: 1s;
+}
+.show .back-to-position.delay-11 {
+  transition-delay: 1.1s;
+}
+.show .back-to-position.delay-12 {
+  transition-delay: 1.2s;
+}
 
 /**** GO HOME ****/
 .myname {
@@ -240,8 +297,9 @@ div#menu > ul > li:hover > a > .back {
 }
 #main .contentswrap img {
   position: absolute;
-  top: 8%;
+  top: 5%;
   right: 2%;
+  width: 47%;
 }
 #main > .contentswrap > .title {
   position: absolute;
@@ -451,9 +509,9 @@ section h3 {
 }
 #main_webbanner .contentswrap img {
   position: absolute;
-  top: 20%;
+  top: 13%;
   right: 2%;
-  width: 550px;
+  width: 45%;
 }
 #main_webbanner > .contentswrap > .title {
   position: absolute;
@@ -594,9 +652,9 @@ section h3 {
 }
 #main_webpage .contentswrap img {
   position: absolute;
-  top: 20%;
+  top: 17%;
   right: 2%;
-  width: 550px;
+  width: 40%;
 }
 #main_webpage > .contentswrap > .title {
   position: absolute;
@@ -713,9 +771,9 @@ section h3 {
 }
 .graphic_body #main .contentswrap img {
   position: absolute;
-  top: 10%;
+  top: 7%;
   right: 10%;
-  width: 450px;
+  width: 27%;
 }
 .graphic_body #main .contentswrap .title {
   width: 21%;
@@ -782,9 +840,9 @@ section h3 {
 }
 #main_brochure .contentswrap img {
   position: absolute;
-  top: 16%;
+  top: 17%;
   right: 1%;
-  width: 750px;
+  width: 52%;
 }
 #main_brochure > .contentswrap > .title {
   position: absolute;
@@ -914,96 +972,6 @@ section h3 {
 #graphic_3 ul {
   width: 80%;
   margin: 0 auto;
-  padding: 0 0 100px 0;
-}
-#graphic_3 ul li {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 80px;
-}
-#graphic_3 ul li img {
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/** SECTION4_#3_포스터_MAIN **/
-/* #main_poster {
-  width: 100%;
-  background: #2c4e9c;
-  margin-top: -2px;
-}
-#main_poster .contentswrap {
-  width: 80%;
-  height: 750px;
-  margin: 0 auto;
-  position: relative;
-}
-#main_poster .contentswrap img {
-  position: absolute;
-  top: 10%;
-  right: 1%;
-  width: 550px;
-}
-#main_poster > .contentswrap > .title {
-  position: absolute;
-  width: 25%;
-  top: 12%;
-  left: 14%;
-}
-#main_poster > .contentswrap > .title > .logo {
-  font-size: 40px;
-  width: 320px;
-  padding-bottom: 15px;
-  border-bottom: 3px solid #fff;
-}
-#main_poster > .contentswrap > .title > h2 {
-  padding-top: 15px;
-  font-size: 24px;
-  line-height: 30px;
-  margin-top: 5px;
-}
-#main_poster > .contentswrap > .title > h3 {
-  padding: 30px 0;
-  font-size: 20px;
-  margin-top: 15%;
-}
-#main_poster > .contentswrap > .title > p {
-  font-size: 24px;
-  padding-top: 1%;
-  font-size: 20px;
-  line-height: 30px;
-}
-#main_poster > .contentswrap > ul.period {
-  position: absolute;
-  top: 72%;
-  left: 14%;
-  font-size: 20px;
-  line-height: 25px;
-} */
-
-/** SECTION5_#3_포스터 **/
-/* #graphic_3 {
-  background-color: #ececec;
-  margin-top: -2px;
-}
-#graphic_3 ul {
-  width: 80%;
-  margin: 0 auto;
   padding: 100px 0;
 }
 #graphic_3 ul li {
@@ -1011,29 +979,9 @@ section h3 {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-bottom: 80px;
+  padding: 50px 0;
 }
-#graphic_3 ul li img {
-  width: 600px;
-  box-shadow: 0 0 17px 1px rgb(0, 0, 0, 7%);
-  margin: 20px;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /** FOOTER_GRAPHIC DESIGN **/
 .graphic_footer {
@@ -1065,103 +1013,6 @@ section h3 {
   margin-top: 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /**** DIGITAL DRAWING ****/
 /** #1_ILLUST_MAIN **/
 .digital_body #main .contentswrap {
@@ -1169,9 +1020,9 @@ section h3 {
 }
 .digital_body #main .contentswrap img {
   position: absolute;
-  top: 10%;
+  top: 4%;
   right: 10%;
-  width: 550px;
+  width: 33%;
 }
 .digital_body #main .contentswrap .title {
   width: 21%;
@@ -1263,9 +1114,9 @@ section h3 {
 }
 #main_character .contentswrap img {
   position: absolute;
-  top: 6%;
+  top: 4%;
   right: 2%;
-  width: 500px;
+  width: 34%;
 }
 #main_character > .contentswrap > .title {
   position: absolute;
@@ -1362,9 +1213,9 @@ section h3 {
 }
 #main_drawing .contentswrap img {
   position: absolute;
-  top: 12%;
+  top: 5%;
   right: 2%;
-  width: 500px;
+  width: 42%;
 }
 #main_drawing > .contentswrap > .title {
   position: absolute;
